feat(Problem1) 승자를 판별하는 메서드 구현