@@ -4,8 +4,10 @@ import onboarding.problem1.*;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 
 public class Problem1Test {
 
@@ -16,7 +18,20 @@ public class Problem1Test {
     }
     @Test
     public void testTwoPage() {
-        Person person = new Person(Arrays.asList(123,124));
+        Person person = new Person(List.of(123,124));
         assertThat(person.getLargeValue()).isEqualTo(8);
     }
+    @Test
+    public void validPagesContinuous() {
+        assertThatThrownBy(() -> {
+            Person person = new Person(List.of(123,456));
+        }).isInstanceOf(IllegalArgumentException.class);
+    }
+    @Test
+    public void validPagesOdd() {
+        assertThatThrownBy(() -> {
+            Person person = new Person(List.of(124,125));
+        }).isInstanceOf(IllegalArgumentException.class);
+    }
+
 }
